chore: Added ESLint and Prettier
chore: Format Codebase
