# packages/backend/openapi.yml
@@ -1,10 +1,10 @@
-openapi: '3.0.2'
+openapi: "3.0.2"
 info:
   title: Montimus API
-  version: '0.0.0'
+  version: "0.0.0"
   license:
     name: Apache 2.0
-    url: 'https://www.apache.org/licenses/LICENSE-2.0.html'
+    url: "https://www.apache.org/licenses/LICENSE-2.0.html"
 tags:
   - name: General
     description: General endpoints
@@ -16,7 +16,7 @@ paths:
       tags:
         - General
       responses:
-        '200':
+        "200":
           description: Returns the API version
           content:
             application/json:
@@ -30,13 +30,13 @@ paths:
                     description: API version
                 example:
                   status: 200
-                  message: '1.0.0'
+                  message: "1.0.0"
   /helloworld:
     get:
       tags:
         - General
       responses:
-        '200':
+        "200":
           description: Returns a hello world message
           content:
             application/json:
@@ -50,13 +50,13 @@ paths:
                     description: Hello world message
                 example:
                   status: 200
-                  message: 'Hello world!'
+                  message: "Hello world!"
   /monitors: # TODO: Add lastHistory to monitors when getting
     get:
       tags:
         - Monitors
       responses:
-        '200':
+        "200":
           description: Returns an array of all monitors
           content:
             application/json:
@@ -69,27 +69,27 @@ paths:
                     type: array
                     description: List of monitors
                     items:
-                      $ref: '#/components/schemas/Monitor'
+                      $ref: "#/components/schemas/Monitor"
                 example:
                   status: 200
                   data:
                     [
                       {
                         id: 1,
-                        name: 'Google',
-                        description: 'Google website',
-                        url: 'https://google.com',
+                        name: "Google",
+                        description: "Google website",
+                        url: "https://google.com",
                         interval: 60,
-                        createdAt: '2021-01-01T00:00:00.000Z',
-                        updatedAt: '2021-01-01T00:00:00.000Z',
+                        createdAt: "2021-01-01T00:00:00.000Z",
+                        updatedAt: "2021-01-01T00:00:00.000Z",
                       },
                       {
                         id: 2,
-                        name: 'Facebook',
-                        url: 'https://facebook.com',
+                        name: "Facebook",
+                        url: "https://facebook.com",
                         interval: 120,
-                        createdAt: '2021-01-01T00:00:00.000Z',
-                        updatedAt: '2021-01-01T00:00:00.000Z',
+                        createdAt: "2021-01-01T00:00:00.000Z",
+                        updatedAt: "2021-01-01T00:00:00.000Z",
                       },
                     ]
     post:
@@ -100,14 +100,14 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Monitor'
+              $ref: "#/components/schemas/Monitor"
             example:
-              name: 'Google'
-              description: 'Google website'
-              url: 'https://google.com'
+              name: "Google"
+              description: "Google website"
+              url: "https://google.com"
               interval: 60
       responses:
-        '201':
+        "201":
           description: Returns the created monitor
           content:
             application/json:
@@ -117,18 +117,18 @@ paths:
                     type: integer
                     description: HTTP status code
                   data:
-                    $ref: '#/components/schemas/Monitor'
+                    $ref: "#/components/schemas/Monitor"
                 example:
                   status: 201
                   data:
                     id: 1
-                    name: 'Google'
-                    description: 'Google website'
-                    url: 'https://google.com'
+                    name: "Google"
+                    description: "Google website"
+                    url: "https://google.com"
                     interval: 60
-                    createdAt: '2021-01-01T00:00:00.000Z'
-                    updatedAt: '2021-01-01T00:00:00.000Z'
-        '400':
+                    createdAt: "2021-01-01T00:00:00.000Z"
+                    updatedAt: "2021-01-01T00:00:00.000Z"
+        "400":
           description: The provided body is invalid
           content:
             application/json:
@@ -142,8 +142,8 @@ paths:
                     description: Error message
                 example:
                   status: 400
-                  message: 'Bad Request'
-        '409':
+                  message: "Bad Request"
+        "409":
           description: A monitor with the same id already exists
           content:
             application/json:
@@ -157,7 +157,7 @@ paths:
                     description: Error message
                 example:
                   status: 409
-                  message: 'Monitor already exists'
+                  message: "Monitor already exists"
   /monitors/{id}:
     get:
       tags:
@@ -170,7 +170,7 @@ paths:
           schema:
             type: integer
       responses:
-        '200':
+        "200":
           description: Returns the monitor with the provided ID
           content:
             application/json:
@@ -183,13 +183,13 @@ paths:
                   status: 200
                   data:
                     id: 1
-                    name: 'Google'
-                    description: 'Google website'
-                    url: 'https://google.com'
+                    name: "Google"
+                    description: "Google website"
+                    url: "https://google.com"
                     interval: 60
-                    createdAt: '2021-01-01T00:00:00.000Z'
-                    updatedAt: '2021-01-01T00:00:00.000Z'
-        '404':
+                    createdAt: "2021-01-01T00:00:00.000Z"
+                    updatedAt: "2021-01-01T00:00:00.000Z"
+        "404":
           description: The monitor with the provided ID does not exist
           content:
             application/json:
@@ -203,7 +203,7 @@ paths:
                     description: Error message
                 example:
                   status: 404
-                  message: 'Monitor not found'
+                  message: "Monitor not found"
     patch:
       tags:
         - Monitors
@@ -219,14 +219,14 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Monitor'
+              $ref: "#/components/schemas/Monitor"
             example:
-              name: 'Updated Google'
-              description: 'Google website'
-              url: 'https://google.com'
+              name: "Updated Google"
+              description: "Google website"
+              url: "https://google.com"
               interval: 60
       responses:
-        '200':
+        "200":
           description: Returns the updated monitor
           content:
             application/json:
@@ -236,18 +236,18 @@ paths:
                     type: integer
                     description: HTTP status code
                   data:
-                    $ref: '#/components/schemas/Monitor'
+                    $ref: "#/components/schemas/Monitor"
                 example:
                   status: 200
                   data:
                     id: 1
-                    name: 'Updated Google'
-                    description: 'Google website'
-                    url: 'https://google.com'
+                    name: "Updated Google"
+                    description: "Google website"
+                    url: "https://google.com"
                     interval: 60
-                    createdAt: '2021-01-01T00:00:00.000Z'
-                    updatedAt: '2021-01-01T00:00:00.000Z'
-        '400':
+                    createdAt: "2021-01-01T00:00:00.000Z"
+                    updatedAt: "2021-01-01T00:00:00.000Z"
+        "400":
           description: The provided body is invalid
           content:
             application/json:
@@ -261,8 +261,8 @@ paths:
                     description: Error message
                 example:
                   status: 400
-                  message: 'Bad Request'
-        '404':
+                  message: "Bad Request"
+        "404":
           description: The monitor with the provided ID does not exist
           content:
             application/json:
@@ -276,7 +276,7 @@ paths:
                     description: Error message
                 example:
                   status: 404
-                  message: 'Monitor not found'
+                  message: "Monitor not found"
     delete:
       tags:
         - Monitors
@@ -288,7 +288,7 @@ paths:
           schema:
             type: integer
       responses:
-        '204':
+        "204":
           description: Monitor deleted successfully
           content:
             application/json:
@@ -299,7 +299,7 @@ paths:
                     description: HTTP status code
                 example:
                   status: 204
-        '404':
+        "404":
           description: The monitor with the provided ID does not exist
           content:
             application/json:
@@ -313,7 +313,7 @@ paths:
                     description: Error message
                 example:
                   status: 404
-                  message: 'Monitor not found'
+                  message: "Monitor not found"
 
 components:
   schemas:
