# packages/backend/src/routes/helloworld.ts
@@ -1,12 +1,12 @@
-import { PermissionLevel } from '../helpers/permissions'
-import { sendResponse } from '../helpers/response'
-import { Route } from '../route'
+import { PermissionLevel } from "../helpers/permissions";
+import { sendResponse } from "../helpers/response";
+import { Route } from "../route";
 
 export default {
-  path: '/helloworld',
-  method: 'GET',
+  path: "/helloworld",
+  method: "GET",
   permissionLevel: PermissionLevel.NONE,
   handler: (_req, res) => {
-    sendResponse(res, 200, 'Hello World, how are you?')
+    sendResponse(res, 200, "Hello World, how are you?");
   },
-} as Route
+} as Route;
